# RAGFlow-Refactored

./: .gitignore  docker-compose.yml
admin_panel/: Dockerfile  pyproject.toml
admin_panel/src/: config.py  main.py
admin_panel/src/database/: connection.py  models.py  repositories.py
admin_panel/src/pages/: _base.py  create_user.py  files.py  models.py  users.py
admin_panel/src/utils/: users.py
